@@ -159,6 +159,10 @@
 extern "C" {
 #endif
 
+#include <event-config.h>
+#ifdef _EVENT_HAVE_SYS_TYPES_H
+#include <sys/types.h>
+#endif
 #include <sys/time.h>
 #include <stdint.h>
 #include <stdarg.h>
